objects/Address_info__c.object
<CustomObject>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Address info</label>
    <nameField>
        <label>Address info Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Address info</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>